# routes/api.php
@@ -9,22 +9,22 @@ use App\Http\Controllers\ArticleController;
 // ================================
 // コメント機能
 // ================================
-Route::get('/articles/{article_id}/comments', [CommentController::class, 'index']);
+Route::get('/articles/{article}/comments', [CommentController::class, 'index']);
 Route::middleware('auth:sanctum')->group(function () {
-    Route::post('/articles/{article_id}/comments', [CommentController::class, 'store']);
-    Route::put('/comments/{comment_id}', [CommentController::class, 'update']);
-    Route::delete('/comments/{comment_id}', [CommentController::class, 'destroy']);
+    Route::post('/articles/{article}/comments', [CommentController::class, 'store']);
+    Route::put('/comments/{comment}', [CommentController::class, 'update']);
+    Route::delete('/comments/{comment}', [CommentController::class, 'destroy']);
 });
 
 // ================================
 // 記事管理
 // ================================
-Route::get('/articles', [ArticleController::class, 'index']);
-Route::get('/articles/{articleId}', [ArticleController::class, 'show']);
+Route::get('/articles', [ArticleController::class, 'index'])->name('articles.index');
+Route::get('/articles/{article}', [ArticleController::class, 'show'])->name('articles.show');
 Route::middleware('auth:sanctum')->group(function () {
-    Route::post('/articles', [ArticleController::class, 'store']);
-    Route::put('/articles/{articleId}', [ArticleController::class, 'update']);
-    Route::delete('/articles/{articleId}', [ArticleController::class, 'destroy']);
+    Route::post('/articles', [ArticleController::class, 'store'])->name('articles.store');
+    Route::put('/articles/{article}', [ArticleController::class, 'update'])->name('articles.update');
+    Route::delete('/articles/{article}', [ArticleController::class, 'destroy'])->name('articles.destroy');
 });
 
 // ================================
@@ -32,8 +32,8 @@ Route::middleware('auth:sanctum')->group(function () {
 // ================================
 
 // 認証関連
-Route::post('/register/step1', [UserController::class, 'registerStep1']);
-Route::post('/register/step2', [UserController::class, 'registerStep2']);
+Route::post('/register/preregister', [UserController::class, 'preregister']);
+Route::post('/register/verify', [UserController::class, 'verify']);
 Route::post('/login', [UserController::class, 'login']);
 // ユーザー情報関連
 Route::middleware('auth:sanctum')->group(function () {
